--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.mjs"
+  },
+  "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
+    "express": "^4.18.2",
+    "fs": "0.0.1-security",
+    "playwright-core": "^1.33.0"
   }
 }
