--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "http-nodejs",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "Aiden Bai",
+  "author": "pinky-pig",
   "license": "MIT",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon server.mjs",
     "start": "node server.mjs"
@@ -11,7 +11,11 @@
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "express": "^4.18.2",
-    "fs": "0.0.1-security",
     "playwright-core": "^1.33.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^0.38.4",
+    "eslint": "^8.38.0",
+    "fs": "0.0.1-security"
   }
 }
