--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "express": "^4.18.2",
+    "playwright": "^1.33.0",
     "playwright-core": "^1.33.0"
   },
   "devDependencies": {
