--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "dev": "npx playwright install && nodemon server.mjs",
-    "start": "npx playwright install && node server.mjs"
+    "dev": "nodemon server.mjs",
+    "start": "node server.mjs"
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "express": "^4.18.2",
+    "playwright": "^1.33.0",
     "playwright-core": "^1.33.0"
   },
   "devDependencies": {
