fix: compete preview

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "dev": "npx playwright install && nodemon server.mjs",
+    "dev": "nodemon server.mjs",
     "start": "npx playwright install && node server.mjs"
   },
   "dependencies": {
