--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.mjs",
-    "start": "npx playwright install && node server.mjs"
+    "dev": "cross-env API_URL=http://localhost:3200/ nodemon server.mjs",
+    "start": "npx playwright install && cross-env API_URL=https://dev.mmeme.me/ node server.mjs"
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "playwright-core": "^1.33.0"
   },
