fix: 在 MacBook 中调试

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\server.mjs"
+      // "program": "${workspaceFolder}\\server.mjs"
+      "program": "${workspaceFolder}/server.mjs"
     }
   ]
 }
