fix: 配置 vercel.json

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env API_URL=http://localhost:3200/ nodemon server.mjs",
-    "build": "npx playwright install && cross-env API_URL=https://dev.mmeme.me/ node server.mjs",
-    "start": "npx playwright install && cross-env API_URL=https://dev.mmeme.me/ node server.mjs"
+    "build": "npx playwright install &&  node server.mjs",
+    "start": "npx playwright install &&  node server.mjs"
   },
   "dependencies": {
     "@vercel/node": "^2.14.2",
