fix: 配置 vercel.json 1

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
   "github": {
     "silent": true
   },
+  "builds": [
+    {
+      "src": "server.mjs",
+      "use": "@vercel/node",
+      "command": "npm run build"
+    }
+  ],
   "routes": [
     { "src": "/(.*)", "dest": "/server.mjs" }
   ]
